scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,14 +8,18 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+html,
 body {
   max-width: 100%;
+  overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+body {
   background-color: rgb(39 39 42);
   animation: fadeIn ease 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  overflow-x: hidden;
   overflow-y: hidden;
 }
 
